make new html pages

--- a/index.html
+++ b/index.html
@@ -74,12 +74,12 @@
                                 Spettacoli
                             </a>
                             <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                                <a class="dropdown-item" href="#">Gibsy</a>
-                                <a class="dropdown-item" href="#">Pane di Ferro</a>
-                                <a class="dropdown-item" href="#">Giovanni VIII</a>
-                                <a class="dropdown-item" href="#">Melodie Stonate</a>
-                                <a class="dropdown-item" href="#">Il taglio del bosco</a>
-                                <a class="dropdown-item" href="#">Archivio</a>
+                                <a class="dropdown-item" href="gibsy.html">Gibsy</a>
+                                <a class="dropdown-item" href="panediferro.html">Pane di Ferro</a>
+                                <a class="dropdown-item" href="">Giovanni VIII</a>
+                                <a class="dropdown-item" href="">Melodie Stonate</a>
+                                <a class="dropdown-item" href="">Il taglio del bosco</a>
+                                <a class="dropdown-item" href="">Archivio</a>
                             </div>
                         </li>
                         <li class="nav-item dropdown">
@@ -95,8 +95,7 @@
 
 
                         <li class="navbar-item dropdown">
-                            <a class="nav-link" href="" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown"
-                                aria-haspopup="true" aria-expanded="false">Contatti</a>
+                            <a class="nav-link" href="#contatti">Contatti</a>
                         </li>
                     </ul>
                 </div>
@@ -143,7 +142,8 @@
             <h1>
                 Storia
             </h1>
-            <p class="text-justify">
+
+            <p>
                 Il Teatro delle Stanze si costituisce associazione il 28.01.2008, a Poggibonsi (Siena), con l’obiettivo
                 di
                 creare una
@@ -204,15 +204,12 @@
             </p>
 
         </div>
-
-
-
     </section>
 
-    <footer class="fixed-bottom">
+    <footer id="contatti">
         <div class="copyright">© Teatro delle Stanze</div>
-        <i class="fab fa-facebook-f"></i> <i class="fab fa-instagram"></i>
-        <i class="fas fa-envelope"></i>
+        <i class=" icon fab fa-facebook-f"></i> <i class="icon fab fa-instagram"></i>
+        <i class="icon fas fa-envelope"></i>
     </footer>
     </div>
 
